@@ -1,5 +1,9 @@
 2008-02-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* font.c (font_match_xlfd, font_check_xlfd_parse): New funs.
+	(font_parse_xlfd): Use them for sanity check.
+	(Finternal_set_font_style_table): Make sure the table is bijiective.
+
 	Consolidate the image_cache to the terminal struct.
 	* termhooks.h (P_): Remove redundant def.
 	(struct terminal): New field `image_cache'.
